--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
   <link rel="stylesheet" href="./style.css"  />
 
-  <title>duda</title>
-
+  <title>Novo usuario - Sujeito Programador</title>
 </head>
 <body>
 
